--- a/index.css
+++ b/index.css
@@ -3,143 +3,27 @@
     padding: 0%;
     box-sizing: border-box;
 }
+body{
+    background-color: rgb(150, 231, 231);
+}
 .info{
-    display: flex;
+    width: 100%;
+    height: 20vh;
+    background-color: aquamarine;
+    padding: 10px 0px 10px 0px;
     align-items: center;
-    flex-direction: column;
-    margin-bottom: 20px;
-
-}
-label{
-    /* color: gray; */
-    font-weight: bold;
-}
-.inputbox{
     display: flex;
-    width: 300px;
+    justify-content: center;
+    gap: 50px
+    padding: 0px 10px 0px 10px;
+}
+.info input{
     height: 40px;
+    width: 400px;
     border-radius: 20px;
-    text-align: center;
-    border: black solid 1px;
-}
-.inputbox input{
-    border-radius: 20px;
-    border: none;
-    padding-left: 10px;
-    flex: 2;
-}
-.inputbox button{
-    flex: 1; 
-    border-radius: 20px;
-    background-color: rgb(84, 225, 84);
-}
-select{
-    width: 200px;
-    border-radius: 20px;
-    height: 40px;
-    text-align: center;
-}
-option{
-    border-radius: 50px;
-    height: 30px;
+    padding-left:10px ;
 }
 .addbtn{
-    width: 100px;
-    height: 30px;
-    border-radius: 20px;
-    background-color: rgb(97, 231, 97);
-}
-
-.popup {
-    display: none;
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: rgba(0,0,0,0.5);
-    justify-content: center;
-    align-items: center;
-}
-
-.popup-content {
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    height: 350px;
-    width: 500px;
-}
-.tasktable h1{
-    text-align: center;
-}
-table{
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    border-collapse: collapse;
-}
-tr:nth-child(even) {
-    background-color: #dddddd;
-}
-.editbtn{
-    height: 25px;
-    width: 50px;
-    background-color: rgb(130, 130, 236);
-    color: white;
-    border-radius: 10px;
-}
-.deletebtn{
-    height: 25px;
-    width: 50px;
-    background-color: rgb(234, 46, 46);
-    color: white;
-    border-radius: 10px;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-#suggestions{
-    position:absolute;
-    top:35px; 
-    left:0; 
-    width:100%;  
-    border:1px solid #ccc;
-    max-height:150px;
-    overflow-y:auto; 
-    background:#fff; 
-    list-style:none; 
-    margin:0; 
-    padding:0; 
-    display:none;
-}
-.slist{
-    padding:5px; 
-    cursor:pointer;
+    width: 150px;
     height: 40px;
-}
-.closebtn{
-    height: 35px;
-    width: 60px;
-    background-color: antiquewhite;
-    border-radius: 10px;
-}
-.savebtn{
-    height: 35px;
-    width: 60px;
-    background-color: rgb(146, 238, 80);
-    border-radius: 10px;
-}
-#taskName{
-    height: 35px;
-    width: 250px;
-    border-radius: 10px;
-    padding-left: 15px;
-}
-#taskDate{
-    height: 35px;
-    width: 250px;
-    border-radius: 10px;
-    text-align: center;
 }
