--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body{
     align-items: center;
     display: flex;
     justify-content: center;
-    gap: 50px
+    gap: 50px;
     padding: 0px 10px 0px 10px;
 }
 .info input{
@@ -26,4 +26,13 @@ body{
 .addbtn{
     width: 150px;
     height: 40px;
+}
+.popup{
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: beige;
+    padding: 30px;
+    transform: translate(-50%,-50%);
 }
